artifacts/apps/open-webui/manifests/open-webui.yaml
---
# Source: open-webui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    helm.sh/chart: open-webui-16.0.0
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
spec:
  selector:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
---
# Source: open-webui/templates/workload-manager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    helm.sh/chart: open-webui-16.0.0
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
    
spec:
  replicas: 1
  serviceName: open-webui
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/component: open-webui
  template:
    metadata:
      labels:
        helm.sh/chart: open-webui-16.0.0
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/component: open-webui
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      serviceAccountName: open-webui-sa
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:0.11.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/db
            port: http
          periodSeconds: 10
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1155Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
        tty: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: open-webui
---
# Source: open-webui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    helm.sh/chart: open-webui-16.0.0
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
spec:
  ingressClassName: traefik
  rules:
  -
    host: open-webui.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              name: http
